force-app/main/default/objects/Manual_Fee_Payment__c/Manual_Fee_Payment__c.object-meta.xml
<CustomObject>
    <label>Manual Fee Payment</label>
    <nameField>
        <displayFormat>MFP-{00000}</displayFormat>
        <label>Manual Fee Payment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manual Fee Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>