force-app/main/default/objects/Manual_Fee_Payment__c/fields/Check_Type__c.field-meta.xml
<CustomField>
    <fullName>Check_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Audit Fee Waiver</fullName>
            </value>
            <value>
                <fullName>Cashier's Check</fullName>
            </value>
            <value>
                <fullName>Certified Check</fullName>
            </value>
            <value>
                <fullName>Charged-Back</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Credit CS Payment</fullName>
            </value>
            <value>
                <fullName>EFT - Electronic Funds Transfer</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>