force-app/main/default/objects/Manual_Fee_Payment__c/fields/External_User__c.field-meta.xml
<CustomField>
    <fullName>External_User__c</fullName>
    <description>True when the user profile is a portal user.</description>
    <formula>IF( ISPICKVAL($Profile.UserType, 'CspLitePortal'), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>