force-app/main/default/objects/Manual_Fee_Payment__c/fields/Fee_Summary_ID__c.field-meta.xml
<CustomField>
    <fullName>Fee_Summary_ID__c</fullName>
    <formula>Registration__r.Fee_Summary_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fee Summary ID</label>
    <type>Text</type>
</CustomField>