force-app/main/default/objects/Manual_Fee_Payment__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration</label>
    <referenceTo>License_Registration__c</referenceTo>
    <relationshipLabel>Manual Fee Payments</relationshipLabel>
    <relationshipName>Manual_Fee_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>